<resources>
    <string name="app_name">CountryCity</string>

    <string name="hello_blank_fragment">     Hello it is Country and city App.\nLet you show you the latest news relevant to your location.</string>
    <string name="start">Start</string>
    <string name="list_frag">List</string>
    <string name="item_text">TextView</string>
    <string name="item_sort_to_small">Big -> small (by area)</string>
    <string name="item_sort_to_big">Small -> big (by area)</string>
    <string name="capital_is">Capital is %1$s</string>
    <string name="population_is">population is %1$d people</string>
    <string name="area_is">area is %1$s square km</string>
    <string name="languages">languages : %1$s </string>
    <string name="sort_countries">sort countries</string>
    <string name="detail">Detail</string>
    <string name="description_of_country">The area of the country is %1$s  square kilometers and the population is %2$s people. </string>
    <string name="region">The %1$s is in the %2$s region. </string>
    <string name="enter_name_country">Enter name country</string>
    <string name="quick_search">Quick search</string>
    <string name="yes">YES</string>
    <string name="hi_app">Sorry, but we can\'t find news in you location.\n Let\'s see some articles.</string>
    <string name="wrong_county">Wrong name of country!</string>
    <string name="map">map</string>
    <string name="mapCountry">Map</string>
    <string name="some_wrong">some wromg!</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="no">NO</string>
    <string name="ok">ok</string>
    <string name="enter_your_keyword">Enter your keyword</string>

    <!-- Permissions -->
    <string name="permission_rationale_location">Access to the location service is required to app, which shows your current location on the map.</string>
    <string name="location_permission_denied">This  requires location permission to enable . Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings </string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="area_of_country">Area of country</string>
    <string name="_100">100</string>
    <string name="population_of_country">Population of country</string>
    <string name="parameters_of_list">Parameters of list</string>
    <string name="_0">0</string>
    <string name="distance">Distance :</string>
    <string name="enter_distance">Enter distance</string>
    <string name="min">min</string>
    <string name="max">max</string>
    <string name="_17124442">17124442</string>
    <string name="_1377422166">1377422166</string>
    <string name="capitals">Capitals</string>
    <string name="_450">450</string>
    <string name="_120555">120555</string>
    <string name="_1256">1256</string>
    <string name="_120">120</string>
    <string name="no_location_permission_error">Location tracking will not work does not work</string>
    <string name="foreground_channel_id">id</string>
    <string name="foreground_notification_name">name</string>
    <string name="foreground_channel_name">Location service by CountryCity</string>
    <string name="text_notification_location_tracking">Now app CountryCity execute a location tracking</string>
    <string name="search_country">Search country</string>
    <string name="setting">Setting</string>
    <string name="allow">ALLOW</string>
    <string name="denied_toast">Access is denied</string>
    <string name="country">CountryCity</string>
    <string name="denny">DENNY</string>
    <string name="deny">DENY</string>
</resources>