<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/startFragment"
        android:icon="@drawable/ic_action_name"
        android:title="@string/start" />
    <item
        android:id="@+id/listFragment"
        android:icon="@drawable/ic_action_list"
        android:title="@string/list_frag" />
    <item
        android:id="@+id/countryDetailsFragment"
        android:actionLayout="@layout/fragment_country_details"
        android:icon="@drawable/ic_action_detail_map"
        android:title="@string/detail" />
    <item
        android:id="@+id/mapCountiesFragment"
        android:icon="@drawable/ic_world"
        android:title="@string/mapCountry"
        android:actionLayout="@layout/fragment_map_of_countries"/>
    <item
        android:id="@+id/capitalsList"
        android:icon="@drawable/ic_capital_list"
        android:title="@string/capitals"
        android:actionLayout="@layout/fragment_list_capitals"/>

</menu>