<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:background="@color/white">
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="@dimen/zero_dp"
        android:layout_height="@dimen/zero_dp"
        android:id="@+id/guideline_centr"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_dialog"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_view_18sp"
        android:gravity="center"
        android:text="@string/quick_search"
        android:textSize="12dp"
        app:layout_constraintBottom_toTopOf="@id/mETNameCountry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title_dialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:hint="@string/enter_name_country"
        android:id="@+id/mETNameCountry"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mButtonNo"
        app:layout_constraintStart_toStartOf="@id/guideline_centr"
        app:layout_constraintTop_toBottomOf="@id/mETNameCountry"
        android:text="@string/no"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/mButtonNo"
        app:layout_constraintTop_toBottomOf="@id/mETNameCountry"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/yes"
        android:clickable="false"
        android:id="@+id/mButtonYes"
        android:layout_marginStart="@dimen/padding8"/>
</androidx.constraintlayout.widget.ConstraintLayout>