<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="@dimen/zero_dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/_16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="@dimen/zero_dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/_16" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/peek_icon"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_view_32"
        android:src="@drawable/ic_filter_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_filter_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16"
        android:gravity="center"
        android:text="@string/parameters_of_list"
        android:textSize="@dimen/text_view_18sp"
        app:layout_constraintBottom_toTopOf="@id/text_area_county"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/peek_icon" />




    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_area_county"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16"
        android:gravity="center"
        android:text="@string/area_of_country"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_filter_sheet"
        tools:text="@string/area_of_country" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_start_range_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/text_area_county"
        tools:text="@string/_0" />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/range_slider_area"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:valueFrom="0.0"
        android:valueTo="100.0"
        app:layout_constraintEnd_toStartOf="@id/guideline3"
        app:layout_constraintStart_toEndOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/text_start_range_area"
        app:values="@array/initial_slider_values" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_end_range_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_100"
        app:layout_constraintEnd_toStartOf="@id/guideline3"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@id/text_start_range_area"
        app:layout_constraintTop_toBottomOf="@id/text_area_county"
        tools:text="100"
        app:layout_constraintBaseline_toBaselineOf="@id/text_start_range_area"/>

    <androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/text_population_county"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_16"
    android:gravity="center"
    android:text="@string/area_of_country"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/range_slider_area"
    tools:text="@string/population_of_country" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_start_range_population"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/text_population_county"
        tools:text="@string/_0" />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/range_slider_population"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:valueFrom="0.0"
        android:valueTo="100.0"
        app:layout_constraintEnd_toStartOf="@id/guideline3"
        app:layout_constraintStart_toEndOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/text_start_range_population"
        app:values="@array/initial_slider_values" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_end_range_population"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_100"
        app:layout_constraintEnd_toStartOf="@id/guideline3"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@id/text_start_range_population"
        app:layout_constraintTop_toBottomOf="@id/text_population_county"
        tools:text="100"
        app:layout_constraintBaseline_toBaselineOf="@id/text_start_range_population"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/range_slider_population"
        app:layout_constraintStart_toEndOf="@id/guideline2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/distance"
        tools:text="@string/distance"
        android:layout_marginTop="@dimen/_24pd"
        android:layout_marginBottom="@dimen/dp48"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/range_slider_population"
        app:layout_constraintEnd_toStartOf="@id/guideline3"
        app:layout_constraintStart_toEndOf="@id/text_distance"
        app:layout_constraintHorizontal_bias="1"
        android:hint="@string/enter_distance"
        app:layout_constraintBaseline_toBaselineOf="@id/text_distance"
      />


    <!--        <androidx.appcompat.widget.AppCompatTextView-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:gravity="center"-->
    <!--            android:text="@string/population_of_country"-->
    <!--            tools:text="@string/population_of_country" />-->

    <!--       -->

    <!--            <androidx.appcompat.widget.AppCompatTextView-->
    <!--                android:layout_width="wrap_content"-->
    <!--                android:layout_height="match_parent"-->
    <!--                android:gravity="center_vertical"-->
    <!--                android:text="0"-->
    <!--                tools:text="0" />-->

    <!--            <com.google.android.material.slider.RangeSlider-->
    <!--                android:layout_width="wrap_content"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:valueFrom="0.0"-->
    <!--                android:valueTo="100.0"-->
    <!--                app:values="@array/initial_slider_values" />-->

    <!--            <androidx.appcompat.widget.AppCompatTextView-->
    <!--                android:layout_width="wrap_content"-->
    <!--                android:layout_height="match_parent"-->
    <!--                android:gravity="center_vertical"-->
    <!--                android:text="@string/_100"-->
    <!--                tools:text="100" />-->
    <!--        -->


</androidx.constraintlayout.widget.ConstraintLayout>